--- a/Arquitectura APIs/BACKEND-SECTION/package.json
+++ b/Arquitectura APIs/BACKEND-SECTION/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start":"node index.js",
+    "start": "node index.js",
     "dev": "nodemon index.js"
   },
   "author": "jose mari tome",
@@ -22,5 +22,11 @@
     "memory-cache": "^0.2.0",
     "mongoose": "^5.9.22",
     "swagger-ui-express": "^4.1.4"
+  },
+  "devDependencies": {
+    "dotenv": "^8.2.0",
+    "jest": "^26.1.0",
+    "mockingoose": "^2.13.2",
+    "nodemon": "^2.0.4"
   }
 }
